# HanCode

./: .env.example  .gitignore  .gitlab-ci.yml  AGENTS.md  AGENT_LOG.md  AI4SE_Final_Project_0_通用要求.md  AI4SE_Final_Project_通用要求.md  Makefile  PLAN.md  README.md  REFLECTION.md  SPEC.md  SPEC_PROCESS.md  pyproject.toml
.github/workflows/: ci.yml
.superpowers/sdd/: task-1-report.md
docs/: AGENT_LOG.md  PLAN.md  SPEC.md  SPEC_PROCESS.md  系统架构.md
docs/agent-guides/: assignment-map.md  harness-boundary.md  safety-and-verification.md  workflow.md
examples/.hancode-template/: course_context.md  experience.md  project.json  project_memory.md
scripts/: demo_mock_loop.py
src/hancode/: README.md  __init__.py  actions.py  cli.py  (+24 more)
tests/: README.md  _checkpoint_helpers.py  test_action_parser.py  test_action_schema.py  test_agent_loop.py  test_agent_loop_adapters.py  test_app_layers.py  test_approval_e2e.py  test_approval_model.py  test_approval_policy.py  test_approval_recovery.py  test_approval_resume_guards.py  test_approval_security.py  test_approval_service.py  test_build_tools.py  test_change_inspection_service.py  test_change_models.py  test_checkpoint_query.py  test_checkpoints.py  test_ci_config.py  test_cli.py  test_cli_approval.py  test_cli_tasks.py  test_config.py  test_context_builder.py  test_course_file_protection.py  test_course_project_scaffold.py  test_credentials.py  test_delivery.py  test_diff_tools.py  test_errors.py  test_export.py  test_feedback.py  test_feedback_loop.py  test_file_tools.py  test_inspection_service.py  test_interaction_config.py  test_interaction_e2e.py  test_interaction_service.py  test_interaction_state.py  (+49 more)
(+114 files in other folders)
