[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hancode"
version = "0.1.0"
description = "面向学生课程项目的轻量级 Coding Agent Harness，支持 workspace 隔离、阶段门禁、执行追踪和 checkpoint 回退。"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "typer>=0.12",
    "keyring>=25.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
hancode = "hancode.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hancode = [
    "_demo_fixture/*.md",
    "_demo_fixture/src/*.py",
    "_demo_fixture/tests/*.py",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
exclude = ["^src/hancode/_demo_fixture/"]
